--- a/top.html
+++ b/top.html
@@ -1,3 +1,9 @@
+<?php
+    session_start();
+    if (!isset($_SESSION['user'])) {
+        header('Location: login.php');
+    }
+?>
 <html>
 <head>
     <title>Obligatorisk Oppgave 3</title>
