--- a/top.html
+++ b/top.html
@@ -6,7 +6,7 @@
 ?>
 <html>
 <head>
-    <title>Obligatorisk Oppgave 3</title>
+    <title>Obligatorisk Oppgave 4</title>
     <meta charset="UTF-8">
     <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
@@ -31,9 +31,8 @@
 <div id="body">
 <div class="user_admin_bar">
     <ul>
-        <li>Logget inn som <strong><?php echo $_SESSION['username']; ?></strong></li>
-        <li><a href="#">Administrer Brukere</a></li>
-        <li><a href="#">Ny Bruker</a></li>
+        <li><a href="php/login/hub/">Administrer Brukere</a></li>
         <li><a href="php/login/logout.php">Logg Ut</a></li>
+        <li>Logget inn som <strong><?php echo $_SESSION['username']; ?></strong></li>
     </ul>
 </div>
